# neuralhydrology_train

./: .gitmodules  justfile  pyproject.toml
.dvc/: config
basin_files/: test.txt  train.txt  val.txt
configs/: config.yml
data/: .gitignore  CABra.dvc
